--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,1 +1,4 @@
 // Contains all the CSS that handles the layout, such as the container and any grid systems
+.content-container {
+    padding: 15px
+}
