--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -1,10 +1,2 @@
 // Contained within this file are all your resets, variables, mixins, and any utility classes
-.header-banner {
-    height:400px;
-    background-image:url(/images/header-background.jpg);
-    background-size:cover;
-    h1 {
-        color:white;
-        font-size:800%;
-    }
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap');
