--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -33,6 +33,10 @@
   }
 }
 
+.content-container {
+  line-height: 200%;
+}
+
 .content-container p {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
