--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -1,29 +1,64 @@
 // Anything reusable such as buttons, navbars, cards etc.
 .header-banner {
-    height:400px;
-    background-image:url(/images/header-background.jpg);
-    background-size:cover;
+    height: 400px;
+    background-image: url(/images/header-background.jpg);
+    background-size: cover;
     @media only screen and (max-width: 500px) {
-        height:300px;
+        height: 300px;
     }
 
     h1 {
-        color:white;
-        font-size:125px;
-        font-family: 'Montserrat', sans-serif;
+        @include header-font;
         @media only screen and (max-width: 500px) {
-            font-size:100px;
+            font-size: 100px;
         }
         @media only screen and (max-width: 400px) {
-            font-size:75px;
+            font-size: 75px;
         }
     }
 }
 
 .content-container {
-    line-height:200%;
-    p {
-        font-family: 'Open Sans', sans-serif;
-        font-size:18px;
+    line-height: 200%;
+}
+
+.navbar {
+    display:flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-items: flex-start;
+    height: 50px;
+    background-color: $mainColor;
+}
+
+.navbar-button {
+    padding: 25px;
+    background-color: $mainColor;
+    text-decoration: none;
+}
+
+.navbar-button:hover {
+    background-color: lighten($mainColor, 50%);
+}
+
+.float-right {
+    margin-left: auto;
+}
+
+@media only screen and (max-width: 450px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        height: 150px;
+    }
+    
+    .navbar-button {
+        padding: 10px 30%;
+        text-decoration: none;
+    }
+    
+    .float-right {
+        margin: auto;
     }
 }
