--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,4 +1,9 @@
 // Contains all the CSS that handles the layout, such as the container and any grid systems
 .content-container {
-    padding: 15px
+    margin: 25px 15%;
+}
+
+body {
+    @include main-font;
+    background-color: $mainColor;
 }
