--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,6 +1,7 @@
 // Contains all the CSS that handles the layout, such as the container and any grid systems
-.content-container {
+main {
     margin: 25px 10%;
+    line-height: 200%;
 }
 
 body {
