--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -4,6 +4,13 @@ main {
   line-height: 200%;
 }
 
+@media only screen and (max-width: 450px) {
+  main {
+    margin: 25px 10px;
+    font-size: 16px;
+  }
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
