--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -2,6 +2,10 @@
 main {
     margin: 25px 10%;
     line-height: 200%;
+    @media only screen and (max-width: 450px) {
+        margin: 25px 10px;
+        font-size: 16px;
+    }
 }
 
 body {
