--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -36,13 +36,13 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .header-banner h1 {
     font-size: 100px;
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   .header-banner h1 {
     font-size: 75px;
   }
@@ -78,7 +78,7 @@ body {
   margin-left: auto;
 }
 
-#navbar-button {
+#navbar-button-container {
   display: none;
 }
 
@@ -101,10 +101,16 @@ body {
   .float-right {
     margin: auto;
   }
-  #navbar-button {
+  #navbar-button-container {
     display: block;
     height: 50px;
     background-color: #1c1c1c;
+  }
+  #navbar-button {
+    float: right;
+    height: 30px;
+    width: 30px;
+    margin: 10px;
   }
   #navbar-container {
     display: none;
