--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -5,7 +5,7 @@
     height: 400px;
     background-image: url(/images/header-background.jpg);
     background-size: cover;
-    @media only screen and (max-width: 550px) {
+    @include bp(tablet) {
         height: 300px;
     }
 }
@@ -15,11 +15,11 @@
     text-align: center;
     margin: 0px;
     padding: 124px 0px;
-    @media only screen and (max-width: 550px) {
+    @include bp(tablet) {
         font-size: 100px;
         padding: 89px 0px;
     }
-    @media only screen and (max-width: 450px) {
+    @include bp(phone) {
         font-size: 75px;
         padding: 104px 0px;
     }
@@ -57,7 +57,7 @@ a, a:hover, a:focus, a:active {
     display:none;
 }
 
-@media only screen and (max-width: 450px) {
+@include bp(phone) {
     .navbar {
         flex-direction: column;
         align-items: center;
