--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -2,14 +2,14 @@
 main {
     margin: 25px 10%;
     line-height: 200%;
-    text-align: justify;
-    @media only screen and (max-width: 450px) {
+    text-align: justify; 
+    @include bp(tablet) {
+        margin: 25px 30px;
+    }
+    @include bp(phone) {
         margin: 25px 20px;
         font-size: 16px;
     }
-    @media only screen and (max-width: 550px) {
-        margin: 25px 30px;
-    }        
 }
 
 body {
