--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -14,14 +14,13 @@
     @include header-font;
     text-align: center;
     margin: 0px;
-    padding: 124px 0px;
+    line-height: 400px;
     @include bp(tablet) {
         font-size: 100px;
-        padding: 89px 0px;
+        line-height: 300px;
     }
     @include bp(phone) {
         font-size: 75px;
-        padding: 104px 0px;
     }
 }
 
