--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -124,19 +124,42 @@ a, a:hover, a:focus, a:active {
   .float-right {
     margin: auto;
   }
-  #navbar-menu-button-container {
+  #navbar-container {
+    display: none;
+  }
+  #navbar-menu-button-bar {
     display: block;
     height: 50px;
     background-color: #1c1c1c;
   }
-  #navbar-menu-button {
+  #navbar-menu-button-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     float: right;
-    height: 30px;
-    width: 35px;
-    margin: 10px;
+    height: 50px;
+    width: 50px;
+    margin-right: 10px;
   }
-  #navbar-container {
-    display: none;
+  #navbar-menu-button {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin: auto;
+    display: block;
+    width: 35px;
+  }
+  #navbar-menu-button:after,
+  #navbar-menu-button:before,
+  #navbar-menu-button div {
+    background-color: white;
+    border-radius: 3px;
+    content: '';
+    display: block;
+    height: 5px;
+    margin: 7px 0;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
   }
 }
 /*# sourceMappingURL=main.css.map */
