--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -73,21 +73,41 @@ a, a:hover, a:focus, a:active {
     .float-right {
         margin: auto;
     }
+    
+    #navbar-container {
+        display: none;
+    }
 
-    #navbar-menu-button-container {
+    #navbar-menu-button-bar {
         display: block;
         height: 50px;
         background-color: $mainColor;
     }
 
-    #navbar-menu-button {
+    #navbar-menu-button-container {
+        display:flex;
         float: right;
-        height: 30px;
-        width: 35px;
-        margin: 10px;
+        height: 50px;
+        width: 50px;
+        margin-right: 10px;
     }
 
-    #navbar-container {
-        display: none;
+    #navbar-menu-button {
+        align-self: center;
+        margin: auto;
+        display:block;
+        width: 35px;
+    }
+      
+    #navbar-menu-button:after, 
+    #navbar-menu-button:before, 
+    #navbar-menu-button div {
+        background-color: white;
+        border-radius: 3px;
+        content: '';
+        display: block;
+        height: 5px;
+        margin: 7px 0;
+        transition: all .2s ease-in-out;
     }
 }
