--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,175 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap");
-main {
-  margin: 25px 10%;
-  line-height: 170%;
-  text-align: justify;
-}
-
-@media only screen and (max-width: 550px) {
-  main {
-    margin: 25px 30px;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  main {
-    margin: 25px 20px;
-    font-size: 16px;
-  }
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-  color: white;
-  background-color: #1c1c1c;
-  margin: 0px;
-}
-
-.header-banner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 400px;
-  background-image: url(/images/header-background.jpg);
-  background-size: cover;
-}
-
-@media only screen and (max-width: 550px) {
-  .header-banner {
-    height: 300px;
-  }
-}
-
-.header-text {
-  color: white;
-  font-size: 125px;
-  font-family: 'Montserrat', sans-serif;
-  text-align: center;
-  margin: 0px;
-}
-
-@media only screen and (max-width: 550px) {
-  .header-text {
-    font-size: 100px;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .header-text {
-    font-size: 75px;
-  }
-}
-
-.navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  justify-items: flex-start;
-  height: 50px;
-  background-color: #1c1c1c;
-}
-
-.navbar-button {
-  padding: 13px 25px;
-  background-color: #1c1c1c;
-}
-
-.navbar-button:hover {
-  background-color: #9c9c9c;
-}
-
-a, a:hover, a:focus, a:active {
-  text-decoration: none;
-  color: inherit;
-}
-
-.float-right {
-  margin-left: auto;
-}
-
-.navbar-menu-button-container {
-  display: none;
-}
-
-@media only screen and (max-width: 450px) {
-  .navbar {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    justify-items: center;
-    height: 150px;
-  }
-  .navbar-button {
-    padding: 10px 30px;
-    text-decoration: none;
-  }
-  .float-right {
-    margin: auto;
-  }
-  #navbar-container {
-    display: none;
-  }
-  .navbar-menu-button-bar {
-    display: block;
-    height: 50px;
-    background-color: #1c1c1c;
-  }
-  .navbar-menu-button-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    float: right;
-    height: 50px;
-    width: 50px;
-    margin-right: 10px;
-  }
-  .navbar-menu-button {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    margin: auto;
-    display: block;
-    width: 35px;
-  }
-  .navbar-menu-button:after, .navbar-menu-button:before, .navbar-menu-button div {
-    background-color: white;
-    border-radius: 3px;
-    content: '';
-    display: block;
-    height: 5px;
-    margin: 7px 0;
-    -webkit-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-  }
-  .navbar-menu-button.active:before {
-    -webkit-transform: translateY(12px) rotate(135deg);
-            transform: translateY(12px) rotate(135deg);
-  }
-  .navbar-menu-button.active:after {
-    -webkit-transform: translateY(-12px) rotate(-135deg);
-            transform: translateY(-12px) rotate(-135deg);
-  }
-  .navbar-menu-button.active div {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap");main{margin:25px 10%;line-height:170%;text-align:justify}@media only screen and (max-width: 550px){main{margin:25px 30px}}@media only screen and (max-width: 450px){main{margin:25px 20px;font-size:16px}}body{font-family:'Open Sans', sans-serif;font-size:18px;color:white;background-color:#1c1c1c;margin:0px}.header-banner{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;height:400px;background-image:url(/images/header-background.jpg);background-size:cover}@media only screen and (max-width: 550px){.header-banner{height:300px}}.header-text{color:white;font-size:125px;font-family:'Montserrat', sans-serif;text-align:center;margin:0px}@media only screen and (max-width: 550px){.header-text{font-size:100px}}@media only screen and (max-width: 450px){.header-text{font-size:75px}}.navbar{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-flow:row nowrap;flex-flow:row nowrap;-webkit-box-align:center;-ms-flex-align:center;align-items:center;justify-items:flex-start;height:50px;background-color:#1c1c1c}.navbar-button{padding:13px 25px;background-color:#1c1c1c}.navbar-button:hover{background-color:#9c9c9c}a,a:hover,a:focus,a:active{text-decoration:none;color:inherit}.float-right{margin-left:auto}.navbar-menu-button-container{display:none}@media only screen and (max-width: 450px){.navbar{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;justify-items:center;height:150px}.navbar-button{padding:10px 30px;text-decoration:none}.float-right{margin:auto}#navbar-container{display:none}.navbar-menu-button-bar{display:block;height:50px;background-color:#1c1c1c}.navbar-menu-button-container{display:-webkit-box;display:-ms-flexbox;display:flex;float:right;height:50px;width:50px;margin-right:10px}.navbar-menu-button{-ms-flex-item-align:center;-ms-grid-row-align:center;align-self:center;margin:auto;display:block;width:35px}.navbar-menu-button:after,.navbar-menu-button:before,.navbar-menu-button div{background-color:white;border-radius:3px;content:'';display:block;height:5px;margin:7px 0;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out}.navbar-menu-button.active:before{-webkit-transform:translateY(12px) rotate(135deg);transform:translateY(12px) rotate(135deg)}.navbar-menu-button.active:after{-webkit-transform:translateY(-12px) rotate(-135deg);transform:translateY(-12px) rotate(-135deg)}.navbar-menu-button.active div{-webkit-transform:scale(0);transform:scale(0)}}
 /*# sourceMappingURL=main.css.map */
