--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -56,6 +56,7 @@ a, a:hover, a:focus, a:active {
     display:none;
 }
 
+// Mobile navbar menu and hamburger icon
 @include bp(phone) {
     .navbar {
         flex-direction: column;
