--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,14 +1,16 @@
 // Contains all the CSS that handles the layout, such as the container and any grid systems
 main {
-    margin: 25px 10%;
-    line-height: 170%;
-    text-align: justify; 
-    @include bp(tablet) {
-        margin: 25px 30px;
-    }
-    @include bp(phone) {
-        margin: 25px 20px;
-        font-size: 16px;
+    p {
+        margin: 25px 10%;
+        line-height: 170%;
+        text-align: justify; 
+        @include bp(tablet) {
+            margin: 25px 30px;
+        }
+        @include bp(phone) {
+            margin: 25px 20px;
+            font-size: 16px;
+        }
     }
 }
 
