--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -144,7 +144,7 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
-        img {
+        a {
             margin: 0 10vw;
         }
     }
