Added scss boilerplate

--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,4 +1,22 @@
 // Contains all the CSS that handles the layout, such as the container and any grid systems
+html {
+    font-size: 100%;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    min-height: 100vh;
+    @include main-font;
+    background-color: $mainColor;
+    margin: 0px;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 main {
     p {
         margin: 25px 10%;
@@ -12,10 +30,4 @@ main {
             font-size: 16px;
         }
     }
-}
-
-body {
-    @include main-font;
-    background-color: $mainColor;
-    margin: 0px;
 }
