Switched to using static site builder
Now need to use https://github.com/matthew-occleshaw/personal-site-builder to build website

--- a/html/src/components/header.html
+++ b/html/src/components/header.html
@@ -13,5 +13,5 @@
     </nav>
 </div>
 <div class="header-banner">
-    <h1 class="header-text">{{TITLE}}</h1>
+    <h1 id=page-title class="header-text"></h1>
 </div>
