--- a/html/src/components/header.html
+++ b/html/src/components/header.html
@@ -8,7 +8,7 @@
 <div id="navbar-container">
     <nav class="navbar">
         <a id="home-navbar-button" href="/index.html" class="navbar-button">Home</a>
-        <a id="resume-navbar-button" href="/html/dest/resume.html" class="navbar-button">Resume</a>
+        <a id="portfolio-navbar-button" href="/html/dest/portfolio.html" class="navbar-button">Portfolio</a>
         <a href="mailto:matthew_occleshaw@outlook.com" class="navbar-button float-right">Contact Me</a>
     </nav>
 </div>
