Update error in _components.scss

--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -172,7 +172,7 @@ footer {
 }
 
 // Portfolio items
-.portfolio-item {
+.portfolio-parent {
   display: grid;
   grid-template-columns: 30vw 70vw;
 }
